--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Imports:
  ggalluvial (>= 0.11.1),
  ggplot2 (>= 3.3.0),
  grDevices (>= 3.6.1),
+ here (>= 0.1),
  httr (>= 1.4.1),           
  jsonlite (>= 1.6.1),
  lubridate (>= 1.7.4),                   
