added deduplication functions to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(apply_vsnu)
 export(classify_oa)
 export(clean_doi)
 export(clean_issn)
+export(deduplicate)
+export(deduplicate_per_unit)
 export(doaj_api)
 export(extract_uniques)
 export(get_doaj)
