document and fix the check_all function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(apply_doaj)
 export(apply_matches)
 export(apply_upw)
 export(apply_vsnu)
+export(check_info)
 export(classify_oa)
 export(clean_doi)
 export(clean_issn)
