added functions to export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,18 @@ export(clean_issn)
 export(deduplicate)
 export(doaj_api)
 export(extract_uniques)
+export(full_report)
 export(get_doaj)
 export(get_upw)
 export(get_vsnu)
+export(hoop_report)
+export(individual_reports)
 export(open_everything)
 export(read_ext)
+export(report_to_alluvial)
+export(report_to_dataframe)
+export(report_to_image)
 export(upw_api)
+import(ggplot2)
+import(grDevices)
 import(magrittr)
