fixed dependency issue with ggalluvial

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(report_to_alluvial)
 export(report_to_dataframe)
 export(report_to_image)
 export(upw_api)
+import(ggalluvial)
 import(ggplot2)
 import(grDevices)
 import(magrittr)
