--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(get_upw)
 export(get_vsnu)
 export(hoop_report)
 export(individual_reports)
+export(open_df)
 export(open_everything)
 export(read_ext)
 export(report_to_alluvial)
